skeplib/tests/fixtures/resolver/invalid/namespace_direct_import_conflict/b.sk
fn a() -> Int { return 2; }
export { a };
